[gd_scene load_steps=20 format=2]

[ext_resource path="res://entities/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/ph_tileset.png" type="Texture" id=2]
[ext_resource path="res://scripts/test.gd" type="Script" id=3]
[ext_resource path="res://scripts/roll_mgr.gd" type="Script" id=4]
[ext_resource path="res://futilepro_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://scripts/avail_moves.gd" type="Script" id=6]
[ext_resource path="res://sprites/roll_button1.png" type="Texture" id=7]
[ext_resource path="res://sprites/roll_button3.png" type="Texture" id=8]
[ext_resource path="res://sprites/roll_button2.png" type="Texture" id=9]
[ext_resource path="res://sprites/roll_cover.png" type="Texture" id=10]
[ext_resource path="res://entities/plot.tscn" type="PackedScene" id=11]

[sub_resource type="TileSet" id=1]
0/name = "ph_tileset.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "ph_tileset.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="Animation" id=2]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:default_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.164706, 0.6, 0.788235, 0.392157 ), Color( 0.164706, 0.6, 0.788235, 0.196078 ), Color( 0.164706, 0.6, 0.788235, 0.392157 ) ]
}

[sub_resource type="InputEventAction" id=3]
action = "roll"
pressed = true

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="Animation" id=5]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("roller/label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 48, -76.5 ), Vector2( 48, -51.5 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("roller/label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 48, -76.5 ), Vector2( 48, -63.5 ) ]
}

[sub_resource type="Animation" id=7]
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("roller:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("moves:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 2, 2 ), Vector2( 1.5, 1.5 ) ]
}

[node name="test" type="Node2D"]
script = ExtResource( 3 )

[node name="tile_map" type="TileMap" parent="."]
z_index = -3
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 131086, 0, 0, 131087, 1, 0, 131088, 0, 0, 131089, 1, 0, 196620, 1, 0, 196621, 0, 0, 196622, 1, 0, 196623, 0, 0, 196624, 1, 0, 196625, 0, 0, 196626, 1, 0, 196627, 0, 0, 196628, 1, 0, 196629, 0, 0, 196630, 1, 0, 262155, 1, 0, 262156, 0, 0, 262157, 1, 0, 262158, 0, 0, 262159, 1, 0, 262160, 0, 0, 262161, 1, 0, 262162, 0, 0, 262163, 1, 0, 262164, 0, 0, 262165, 1, 0, 262166, 0, 0, 327690, 1, 0, 327691, 0, 0, 327692, 1, 0, 327693, 0, 0, 327694, 1, 0, 327695, 0, 0, 327696, 1, 0, 327697, 0, 0, 327698, 1, 0, 327699, 0, 0, 327700, 1, 0, 327701, 0, 0, 327702, 1, 0, 327703, 0, 0, 327704, 1, 0, 393222, 0, 0, 393223, 1, 0, 393224, 0, 0, 393225, 1, 0, 393226, 0, 0, 393227, 1, 0, 393228, 0, 0, 393229, 1, 0, 393230, 0, 0, 393231, 1, 0, 393232, 0, 0, 393233, 1, 0, 393234, 0, 0, 393235, 1, 0, 393236, 0, 0, 393237, 1, 0, 393238, 0, 0, 393239, 1, 0, 393240, 0, 0, 393241, 1, 0, 393242, 0, 0, 393243, 1, 0, 458758, 1, 0, 458759, 0, 0, 458760, 1, 0, 458761, 0, 0, 458762, 1, 0, 458763, 0, 0, 458764, 1, 0, 458765, 0, 0, 458766, 1, 0, 458767, 0, 0, 458768, 1, 0, 458769, 0, 0, 458770, 1, 0, 458771, 0, 0, 458772, 1, 0, 458773, 0, 0, 458774, 1, 0, 458775, 0, 0, 458776, 1, 0, 458777, 0, 0, 458778, 1, 0, 458779, 0, 0, 458780, 1, 0, 524294, 0, 0, 524295, 1, 0, 524296, 0, 0, 524297, 1, 0, 524298, 0, 0, 524299, 1, 0, 524300, 0, 0, 524301, 1, 0, 524302, 0, 0, 524303, 1, 0, 524304, 0, 0, 524305, 1, 0, 524306, 0, 0, 524307, 1, 0, 524308, 0, 0, 524309, 1, 0, 524310, 0, 0, 524311, 1, 0, 524312, 0, 0, 524313, 1, 0, 524314, 0, 0, 524315, 1, 0, 524316, 0, 0, 589830, 1, 0, 589831, 0, 0, 589832, 1, 0, 589833, 0, 0, 589834, 1, 0, 589835, 0, 0, 589836, 1, 0, 589837, 0, 0, 589838, 1, 0, 589839, 0, 0, 589840, 1, 0, 589841, 0, 0, 589842, 1, 0, 589843, 0, 0, 589844, 1, 0, 589845, 0, 0, 589846, 1, 0, 589847, 0, 0, 589848, 1, 0, 589849, 0, 0, 589850, 1, 0, 589851, 0, 0, 655366, 0, 0, 655367, 1, 0, 655368, 0, 0, 655369, 1, 0, 655370, 0, 0, 655371, 1, 0, 655372, 0, 0, 655373, 1, 0, 655374, 0, 0, 655375, 1, 0, 655376, 0, 0, 655377, 1, 0, 655378, 0, 0, 655379, 1, 0, 655380, 0, 0, 655381, 1, 0, 655382, 0, 0, 655383, 1, 0, 655384, 0, 0, 655385, 1, 0, 655386, 0, 0, 655387, 1, 0, 720902, 1, 0, 720903, 0, 0, 720904, 1, 0, 720905, 0, 0, 720906, 1, 0, 720907, 0, 0, 720908, 1, 0, 720909, 0, 0, 720910, 1, 0, 720911, 0, 0, 720912, 1, 0, 720913, 0, 0, 720914, 1, 0, 720915, 0, 0, 720916, 1, 0, 720917, 0, 0, 720918, 1, 0, 720919, 0, 0, 720920, 1, 0, 720921, 0, 0, 720922, 1, 0, 720923, 0, 0, 786439, 1, 0, 786440, 0, 0, 786441, 1, 0, 786442, 0, 0, 786443, 1, 0, 786444, 0, 0, 786445, 1, 0, 786446, 0, 0, 786447, 1, 0, 786448, 0, 0, 786449, 1, 0, 786450, 0, 0, 786451, 1, 0, 786452, 0, 0, 786453, 1, 0, 786454, 0, 0, 786455, 1, 0, 786456, 0, 0, 786457, 1, 0, 786458, 0, 0, 851977, 0, 0, 851978, 1, 0, 851979, 0, 0, 851980, 1, 0, 851981, 0, 0, 851982, 1, 0, 851983, 0, 0, 851984, 1, 0, 851985, 0, 0, 851986, 1, 0, 851987, 0, 0, 851988, 1, 0, 851989, 0, 0, 851990, 1, 0, 851991, 0, 0, 851992, 1, 0, 851993, 0, 0, 917515, 1, 0, 917516, 0, 0, 917517, 1, 0, 917518, 0, 0, 917519, 1, 0, 917520, 0, 0, 917521, 1, 0, 917522, 0, 0, 917523, 1, 0, 917524, 0, 0, 917525, 1, 0, 917526, 0, 0, 917527, 1, 0, 917528, 0, 0, 917529, 1, 0, 983052, 1, 0, 983053, 0, 0, 983054, 1, 0, 983055, 0, 0, 983056, 1, 0, 983057, 0, 0, 983058, 1, 0, 983059, 0, 0, 983060, 1, 0, 983061, 0, 0, 983062, 1, 0, 983063, 0, 0, 983064, 1, 0, 1048591, 1, 0, 1048592, 0, 0, 1048593, 1, 0, 1048594, 0, 0, 1048595, 1, 0, 1048596, 0, 0, 1048597, 1, 0, 1048598, 0, 0, 1048599, 1, 0 )

[node name="plots" type="Node2D" parent="."]
z_index = -2

[node name="plot" parent="plots" instance=ExtResource( 11 )]
position = Vector2( 1120, 800 )
north = 128
east = 128

[node name="plot2" parent="plots" instance=ExtResource( 11 )]
position = Vector2( 1120, 672 )
east = 128
south = 128

[node name="plot3" parent="plots" instance=ExtResource( 11 )]
position = Vector2( 1248, 672 )
west = 128
south = 128

[node name="plot4" parent="plots" instance=ExtResource( 11 )]
position = Vector2( 1248, 800 )
north = 128
west = 128

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 1120, 800 )

[node name="lines" type="Line2D" parent="."]
z_index = -1
width = 20.0
default_color = Color( 0.164706, 0.6, 0.788235, 0.392157 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="anim" type="AnimationPlayer" parent="lines"]
autoplay = "idle"
anims/idle = SubResource( 2 )

[node name="canvas" type="CanvasLayer" parent="."]

[node name="roll_mgr" type="Control" parent="canvas"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -88.0
margin_bottom = -56.0
rect_scale = Vector2( 2, 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="roll_btn" type="TextureButton" parent="canvas/roll_mgr"]
margin_right = 128.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
shortcut = SubResource( 4 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 9 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="canvas/roll_mgr/roll_btn"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.5
margin_top = -7.0
margin_right = 36.5
margin_bottom = 7.0
custom_fonts/font = ExtResource( 5 )
text = "Roll Dice!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="roller" type="Control" parent="canvas/roll_mgr"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="canvas/roll_mgr/roller"]
margin_left = 48.0
margin_top = -64.0
margin_right = 80.0
margin_bottom = -32.0
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="roll_cover" type="TextureRect" parent="canvas/roll_mgr/roller"]
margin_left = 32.0
margin_top = -80.0
margin_right = 96.0
margin_bottom = -16.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timer" type="Timer" parent="canvas/roll_mgr"]
wait_time = 0.008

[node name="anim" type="AnimationPlayer" parent="canvas/roll_mgr"]
anims/bounce = SubResource( 5 )
anims/last = SubResource( 6 )
anims/roller_fade = SubResource( 7 )

[node name="avail_moves" type="Label" parent="canvas"]
anchor_left = 0.95
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.1
margin_left = -47.0
margin_bottom = 31.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 5 )
text = "Moves
Left"
align = 1
valign = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="moves" type="Label" parent="canvas/avail_moves"]
margin_left = 13.5
margin_top = -29.5
margin_right = 33.5
margin_bottom = -9.5
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 10, 10 )
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anim" type="AnimationPlayer" parent="canvas/avail_moves"]
anims/pop = SubResource( 8 )
[connection signal="moves_left" from="canvas/roll_mgr" to="canvas/avail_moves" method="_on_roll_btn_moves_left"]
[connection signal="button_down" from="canvas/roll_mgr/roll_btn" to="canvas/roll_mgr" method="_on_roll_btn_button_down"]
[connection signal="button_up" from="canvas/roll_mgr/roll_btn" to="canvas/roll_mgr" method="_on_roll_btn_button_up"]
[connection signal="pressed" from="canvas/roll_mgr/roll_btn" to="canvas/roll_mgr" method="_on_roll_btn_pressed"]
[connection signal="animation_finished" from="canvas/avail_moves/anim" to="canvas/roll_mgr" method="_on_anim_animation_finished"]
